--- a/index.html
+++ b/index.html
@@ -339,7 +339,6 @@
       --header-button-text: #fff;
       --heart-color: #FFA500;
       --section-emoji: '🧡';
-      background-image: linear-gradient(to top, #FF4500 0%, #FFD700 30%, #FFB6C1 60%, #8A2BE2 100%);
     }
     .theme-forest {
       --background-color: #D1E2D1;
@@ -426,7 +425,6 @@
       --header-button-text: #000;
       --heart-color: #000000;
       --section-emoji: '🦇';
-      background: radial-gradient(circle at 50% 10%, rgba(255,215,0,0.5), transparent 60%);
     }
     .theme-batman-signal .tank button, .theme-batman-signal .section button {
         background-color: var(--accent-color);
@@ -455,13 +453,6 @@
       --header-button-text: #fff;
       --heart-color: red;
       --section-emoji: '🕷️';
-      background-image: repeating-linear-gradient(
-        -45deg,
-        rgba(255,0,0,0.1) 0px,
-        rgba(255,0,0,0.1) 2px,
-        transparent 2px,
-        transparent 10px
-      );
     }
     .theme-spiderman h1, .theme-spiderman .tank h3 {
         color: #fff;
@@ -483,8 +474,7 @@
       --heading-color: #fff;
       --tank-background: #286C28;
       --khaled-color: #9E9E9E;
-      --manna-color: #9E9E9E;
-      --text-color: #fff;
+      --manna-color: #9E9E9E  --text-color: #fff;
       --accent-color: #286C28;
       --header-button-bg: #9E9E9E;
       --header-button-text: #fff;
@@ -1189,3 +1179,4 @@
   </script>
 </body>
 </html>
+
