--- a/index.html
+++ b/index.html
@@ -536,6 +536,7 @@
       left: 0;
       width: 100%;
       height: 100%;
+      z-index: -1;
     }
     .theme-wolverine h1 {
         color: var(--heading-color);
@@ -1171,5 +1172,6 @@
   </script>
 </body>
 </html>
+
 
 
