--- a/index.html
+++ b/index.html
@@ -474,7 +474,8 @@
       --heading-color: #fff;
       --tank-background: #286C28;
       --khaled-color: #9E9E9E;
-      --manna-color: #9E9E9E  --text-color: #fff;
+      --manna-color: #9E9E9E  
+      --text-color: #fff;
       --accent-color: #286C28;
       --header-button-bg: #9E9E9E;
       --header-button-text: #fff;
@@ -1172,6 +1173,7 @@
   </script>
 </body>
 </html>
+
 
 
 
